--- a/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
+++ b/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
@@ -305,6 +305,10 @@
     height: 3px;
     width: 8px;
   }
+
+  .info {
+    font-size: 16px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
