--- a/client/src/Components/Manager/MainManager/MainManager.module.css
+++ b/client/src/Components/Manager/MainManager/MainManager.module.css
@@ -1,24 +1,24 @@
 .layout {
-  height: 98vh;
+  height: 100vh;
   background-image: linear-gradient(
       to right bottom,
       rgba(249, 250, 251, 0.932),
       rgba(244, 164, 51, 0.943)
     ),
-    url('../../../../public/img/main_manager.jpg');
+    url("../../../../public/img/main_manager.jpg");
   background-size: cover;
   background-position: top;
   position: relative;
 }
 
 .layout_toggled {
-  height: 98vh;
+  height: 100vh;
   background-image: linear-gradient(
       to right bottom,
       rgba(249, 250, 251, 0.775),
       rgba(244, 164, 51, 0.428)
     ),
-    url('../../../../public/img/main_manager.jpg');
+    url("../../../../public/img/main_manager.jpg");
   background-size: cover;
   background-position: top;
   position: relative;
@@ -27,26 +27,35 @@
 .sider {
   background-color: transparent !important;
   margin-top: 90px;
-  
 }
 
 .menu {
   background-color: transparent !important;
   border-inline-end: none !important;
+  background-color: transparent !important;
+  border-inline-end: none !important;
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
+  font-size: 16px;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 .header {
   background-color: transparent !important;
-  
 }
 
 .header_div {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .content {
   background-color: transparent !important;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .footer {
@@ -59,16 +68,20 @@
 
 .time {
   font-size: 16px;
-  color: rgb(61, 61, 61);
+  color: #fff;
   margin-right: 25px;
   letter-spacing: 1px;
+  font-family: "Futura";
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .welcome {
   margin-left: 50px;
-  font-size: 18px;
-  color: rgb(61, 61, 61);
+  font-size: 22px;
+  color: rgb(255, 255, 255);
   letter-spacing: 1px;
+  font-family: "Futura", sans-serif;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .switch {
@@ -76,3 +89,121 @@
   margin-right: 5px;
 }
 
+.icon {
+  font-size: 22px !important;
+  border: 2px solid rgba(255, 255, 255, 0.9);
+  border-radius: 50%;
+  padding: 5px;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+@media only screen and (max-width: 1000px) {
+  .sider {
+    margin-top: 5px;
+    position: fixed;
+    z-index: 2;
+    height: 30vh;
+  }
+  .layout_secondary {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    align-items: center;
+  }
+
+  .time {
+    position: absolute;
+    top: 0%;
+    left: 85%;
+    font-size: 10px;
+  }
+  .content {
+    width: 600px;
+  }
+
+  .content_collapsed {
+    width: 600px;
+    position: absolute;
+    top: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    left: 20%;
+  }
+
+  .welcome {
+    margin-left: 15px;
+    font-size: 12px;
+  }
+
+  .icon {
+    font-size: 18px !important;
+  }
+
+  .menu {
+    font-size: 14px;
+  }
+
+  :global .ant-layout .ant-layout-sider-zero-width-trigger {
+    color: rgba(61, 61, 61, 0.954);
+    font-size: 20px;
+    background: rgb(255, 255, 255);
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .welcome {
+    font-size: 12px;
+  }
+  .time {
+    font-size: 10px;
+    left: 5%;
+  }
+
+  .header_div {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .menu {
+    font-size: 12px;
+    height: 70px;
+  }
+
+  .icon {
+    font-size: 12px !important;
+  }
+
+  .content {
+    width: 500px;
+  }
+
+  :global .ant-layout .ant-layout-sider-zero-width-trigger {
+    color: rgba(61, 61, 61, 0.954);
+    font-size: 20px;
+    background: rgb(255, 255, 255);
+  }
+
+  .content_collapsed {
+    width: 500px;
+    position: absolute;
+    top: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: row;
+    flex-wrap: wrap;
+    left: -10%;
+  }
+
+  .switch_collapsed {
+    display: none;
+  }
+
+  .switch {
+    min-width: 20px !important;
+  }
+}
