--- a/client/src/Components/Manager/DashboardManager/DashboardManager.module.css
+++ b/client/src/Components/Manager/DashboardManager/DashboardManager.module.css
@@ -2,10 +2,10 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  position: fixed;
+  /* position: fixed;
   left: 50%;
-  transform: translate(-50%);
-  width: 75%;
+  transform: translate(-50%); */
+  width: 100%;
   margin-left: 25px;
 }
 
@@ -99,6 +99,14 @@
 @media only screen and (max-width: 1100px) {
   .info {
     width: 320px;
+  }
+
+  .dashboard {
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%);
+    width: 100%;
+    margin-left: 25px;
   }
 }
 
