--- a/client/src/Components/Manager/MainManager/MainManager.module.css
+++ b/client/src/Components/Manager/MainManager/MainManager.module.css
@@ -54,8 +54,10 @@
   background-color: transparent !important;
   display: flex;
   align-items: flex-start;
+  justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
+  max-width: 100% !important;
 }
 
 .footer {
