--- a/client/src/Components/Manager/UsersManager/UsersManager.module.css
+++ b/client/src/Components/Manager/UsersManager/UsersManager.module.css
@@ -1,13 +1,16 @@
 .main_div {
   display: flex;
   justify-content: flex-start;
+  font-family: "Montserrat";
 }
 
 .buttons {
   display: flex;
   flex-direction: column;
   margin-left: 30px;
- 
+  position: fixed;
+  left: 12%;
+  top: 10%;
 }
 
 .button {
