--- a/client/src/Components/Manager/UsersManager/UsersManager.module.css
+++ b/client/src/Components/Manager/UsersManager/UsersManager.module.css
@@ -1,7 +1,8 @@
 .main_div {
   display: flex;
   justify-content: flex-start;
-  font-family: "Montserrat";
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
 }
 
 .buttons {
@@ -10,13 +11,14 @@
   margin-left: 30px;
   position: fixed;
   left: 12%;
-  top: 10%;
+  top: 17%;
+  font-family: "Futura", sans-serif;
 }
 
 .button {
   margin-top: 20px;
   background-color: rgba(240, 163, 9, 0.584);
-  color: rgb(35, 34, 34);
+  color: rgba(61, 61, 61, 0.954);
   width: 100px;
 }
 
@@ -31,4 +33,35 @@
 .menu {
   background-color: transparent !important;
   border-inline-end: none !important;
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954) !important;
+}
+
+@media only screen and (max-width: 1450px) {
+  .buttons {
+    left: 95%;
+    top: 10%;
+    transform: translate(-95%, -10%);
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .buttons {
+    left: 90%;
+    top: 10%;
+    transform: translate(-90%, -9%);
+    margin-bottom: 0;
+  }
+
+  .menu {
+    font-size: 10px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .buttons {
+    left: 90%;
+    top: 5%;
+    transform: translate(-90%, -5%);
+  }
 }
