--- a/client/src/Components/Manager/UsersManager/NewUserForm.module.css
+++ b/client/src/Components/Manager/UsersManager/NewUserForm.module.css
@@ -1,17 +1,24 @@
 .button {
-  background-color:rgb(168, 221, 244);
+  background-color: rgb(168, 221, 244);
   width: 100px;
   align-self: center;
-
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
 }
 
 .input {
   width: 250px;
   margin-bottom: 15px;
-  
+  color: rgba(61, 61, 61, 0.954);
 }
+
 .form {
-  display:flex;
+  display: flex;
   flex-direction: column;
-  
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%);
+  margin-top: 60px;
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
 }
