--- a/client/src/Components/Manager/ReservationsManager/NewReservation.module.css
+++ b/client/src/Components/Manager/ReservationsManager/NewReservation.module.css
@@ -1,5 +1,6 @@
 .calendar {
   width: 300px;
+  height: auto;
   margin-bottom: 10px;
 }
 
@@ -18,7 +19,6 @@
 .input {
   width: 250px;
   margin-bottom: 10px;
-  
 }
 
 .who {
@@ -34,9 +34,25 @@
 }
 
 .button {
-  background-color:rgb(168, 221, 244);
+  margin-top: 20px;
+  background-color: rgb(168, 221, 244);
   width: 100px;
   align-self: center;
   display: block;
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%);
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
+}
 
+.main_div {
+  height: 100%;
+  text-align: center;
+  margin-top: 30px;
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%);
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
 }
