--- a/client/src/Components/Manager/ReservationsManager/UpcomingReservations.module.css
+++ b/client/src/Components/Manager/ReservationsManager/UpcomingReservations.module.css
@@ -1,59 +1,44 @@
-.data {
-  display: flex;
-  align-items: center;
-}
-
-.date {
-  color: black;
-  font-size: 20px;
-  margin-right: 40px;
-}
-
-.time {
-  align-self: center;
-  color: black;
-  font-size: 20px;
-  margin-right: 40px;
-}
-
-.name {
-  align-self: center;
-  color: black;
-  font-size: 20px;
-  margin-right: 40px;
-}
-
-.edit {
-  font-size: 22px;
-  margin-right: 30px;
-  color: gray;
-  cursor: pointer;
-}
-
-.edit:hover {
-  color: green;
-}
-
-.delete {
-  font-size: 22px;
-  color: gray;
-  cursor: pointer;
-}
-
-.delete:hover {
-  color: brown;
-}
-
 .filter_div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 20px;
 }
 
+.main_div {
+  margin-top: 40px;
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%);
+}
+
 .select {
-  background-color: transparent;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
   font-size: 16px;
-  padding: 2px;
+  padding: 4px 8px;
+  cursor: pointer;
+  outline: none;
+  transition: border-color 0.2s ease-in-out;
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
+}
+
+.select:hover,
+.select:focus {
+  border-color: #3b9c9c;
 }
 
 .option {
   text-align: center;
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
+}
+
+@media only screen and (max-width: 500px) {
+  .select {
+    font-size: 12px;
+    padding: 2px 4px;
+  }
 }
