--- a/client/src/Components/Manager/ReservationsManager/UpcomingReservations.module.css
+++ b/client/src/Components/Manager/ReservationsManager/UpcomingReservations.module.css
@@ -34,6 +34,9 @@
   text-align: center;
   font-family: "Futura", sans-serif;
   color: rgba(61, 61, 61, 0.954);
+  /* position: fixed;
+  left: 50%;
+  transform: translate(-50%); */
 }
 
 @media only screen and (max-width: 500px) {
