--- a/client/src/Components/Manager/ReservationsManager/EditReservation.module.css
+++ b/client/src/Components/Manager/ReservationsManager/EditReservation.module.css
@@ -1,7 +1,12 @@
-.calendar {
-  width: 300px;
- 
-  margin-bottom: 20px;
+.main_div {
+  height: 100%;
+  text-align: center;
+  margin-top: 40px;
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%);
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
 }
 
 .when {
@@ -13,13 +18,13 @@
 }
 
 .time {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .input {
   width: 250px;
   margin-bottom: 20px;
-  
+  text-align: center;
 }
 
 .who {
@@ -34,11 +39,15 @@
   margin-bottom: 10px;
 }
 
-
 .button {
-  background-color:rgb(168, 221, 244);
+  background-color: rgb(168, 221, 244);
   width: 100px;
   align-self: center;
   display: block;
-
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%);
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
+  margin-top: 20px;
 }
