--- a/client/src/Components/Manager/StatisticsManager/Products.module.css
+++ b/client/src/Components/Manager/StatisticsManager/Products.module.css
@@ -3,12 +3,34 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  left: 70%;
+  transform: translate(-70%);
+  width: 65%;
 }
 
-.chart-container {
-  width: 100%;
-  margin-right: 20px;
+canvas {
+  width: 380 !important;
+  height: 430 !important;
 }
+/* .chart_1 {
+  width: 380px !important;
+  height: 380px !important;
+}
+.chart-container {
+  width: 380px;
+  height: 430px;
+  margin-right: 20px;
+} */
+/* 
+canvas {
+  width: 100% !important;
+  height: 100% !important;
+  display: block;
+  margin: 0;
+  padding: 0;
+  border: 1px solid #ccc;
+}  */
 
 /* @media screen and (max-width: 768px) {
   .charts {
