--- a/client/src/Components/Manager/StatisticsManager/Products.module.css
+++ b/client/src/Components/Manager/StatisticsManager/Products.module.css
@@ -1,36 +1,45 @@
-.charts {
+/* .charts {
   margin-top: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: fixed;
-  left: 70%;
-  transform: translate(-70%);
+  left: 50%;
+  transform: translate(-50%);
   width: 65%;
+} */
+.charts {
+  margin-top: 80px;
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 55%;
+  transform: translateX(-55%);
+  width: 80%;
+  max-width: 1200px;
+}
+
+.chart_container {
+  width: 30%;
+  background-color: #f7f7f78d;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  box-sizing: border-box;
+  margin-right: 10px;
+  height: 400px;
 }
 
 canvas {
-  width: 380 !important;
-  height: 430 !important;
+  width: 100%;
+  height: 100%;
 }
-/* .chart_1 {
-  width: 380px !important;
-  height: 380px !important;
-}
-.chart-container {
-  width: 380px;
-  height: 430px;
-  margin-right: 20px;
-} */
-/* 
-canvas {
-  width: 100% !important;
-  height: 100% !important;
-  display: block;
-  margin: 0;
-  padding: 0;
-  border: 1px solid #ccc;
-}  */
 
 /* @media screen and (max-width: 768px) {
   .charts {
