--- a/client/src/Components/Manager/StatisticsManager/Waiters.module.css
+++ b/client/src/Components/Manager/StatisticsManager/Waiters.module.css
@@ -3,6 +3,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 .button_search {
@@ -32,8 +35,8 @@
 }
 
 .table_revenue {
-  width: 50vw;
-  height: 500px !important;
+  width: 55vw;
+  height: 400px !important;
   text-align: center;
 }
 
@@ -75,4 +78,88 @@
 label {
   font-size: 16px;
   color: #333;
+}
+
+.button_download {
+  position: fixed;
+  bottom: -20%;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+@media screen and (max-width: 1100px) {
+  .table_revenue {
+    width: 65vw;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .main_div {
+    margin-top: 20px;
+  }
+  .button_search {
+    margin-left: 5px;
+  }
+
+  .button_reset {
+    margin-left: 5px;
+  }
+
+  .data {
+    margin-top: 90px;
+    height: 70vh;
+  }
+
+  .key {
+    margin-right: 3px;
+  }
+
+  .table_revenue {
+    width: 80vw;
+    height: 500px !important;
+    text-align: center;
+  }
+
+  .button_download {
+    bottom: -5%;
+  }
+
+  .select {
+    width: 10vw;
+  }
+}
+
+@media screen and (max-width: 740px) {
+  .main_div {
+    left: 47%;
+    margin-top: 20px;
+  }
+  .button_search {
+    margin-left: 5px;
+  }
+
+  .button_reset {
+    margin-left: 5px;
+  }
+
+  .data {
+    margin-top: 60px;
+  }
+
+  .key {
+    margin-right: 3px;
+  }
+
+  .table_revenue {
+    width: 90vw;
+    height: 30vh !important;
+  }
+
+  .button_download {
+    bottom: -5%;
+  }
+
+  .select {
+    width: 10vw;
+  }
 }
