--- a/client/src/Components/Manager/StatisticsManager/Revenue.module.css
+++ b/client/src/Components/Manager/StatisticsManager/Revenue.module.css
@@ -11,6 +11,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 .data {
@@ -32,8 +35,8 @@
 }
 
 .table_revenue {
-  width: 50vw;
-  height: 500px !important;
+  width: 45vw;
+  height: 400px !important;
   text-align: center;
 }
 
@@ -41,4 +44,11 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 15px;
+}
+
+.button_download {
+  position: fixed;
+  bottom: -20%;
+  left: 50%;
+  transform: translate(-50%);
 }
