--- a/client/src/Components/Manager/ProductsManager/AllProducts.module.css
+++ b/client/src/Components/Manager/ProductsManager/AllProducts.module.css
@@ -13,6 +13,9 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  left: 55%;
+  transform: translateX(-55%);
 }
 
 .pagination {
@@ -94,4 +97,77 @@ button {
 .reset_button:focus {
   outline: none;
   box-shadow: 0px 0px 2px 2px #b3d4fc;
+}
+
+@media only screen and (max-width: 1600px) {
+  .products {
+    width: 60vw;
+  }
+  .all_products {
+    margin-top: 60px;
+  }
+}
+@media only screen and (max-width: 1400px) {
+  .products {
+    width: 65vw;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .filter_div {
+    margin-right: 5px;
+    font-size: 14px;
+  }
+
+  .reset_button {
+    padding: 9px;
+
+    font-size: 12px;
+  }
+
+  .all_products {
+    left: 45%;
+    transform: translateX(-45%);
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .all_products {
+    left: 25%;
+    transform: translateX(-25%);
+  }
+  .select {
+    width: 50px;
+    margin-left: 2px;
+    margin-right: 5px;
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .all_products {
+    top: 19%;
+    left: 30%;
+  }
+  .select {
+    width: 50px;
+    margin-left: 2px;
+    margin-right: 5px;
+    font-size: 12px;
+    padding: 3px;
+  }
+
+  .pagination {
+    margin-top: 20px;
+  }
+
+  .reset_button {
+    padding: 8px;
+
+    font-size: 10px;
+  }
+
+  .products {
+    width: 70vw;
+  }
 }
