--- a/client/src/Components/Manager/ProductsManager/NewCategory.module.css
+++ b/client/src/Components/Manager/ProductsManager/NewCategory.module.css
@@ -1,9 +1,18 @@
-.category {
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+.main_div {
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%);
+}
 
+.category {
+  margin: 10px 5px;
+  padding: 20px;
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 .existing_categories {
@@ -13,26 +22,27 @@
   align-items: center;
   margin-top: 30px;
   margin-bottom: 60px;
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954) !important;
 }
 
 .button {
-  background-color:rgb(168, 221, 244);
+  background-color: rgb(168, 221, 244);
   width: 100px;
   align-self: center;
-
+  font-family: "Futura", sans-serif;
 }
 
 .input {
   width: 250px;
   margin-bottom: 15px;
-  
+  font-family: "Futura", sans-serif;
 }
 .form {
-  display:flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
 }
 .text {
   margin-bottom: 20px;
@@ -51,16 +61,52 @@
 
 ::placeholder {
   text-align: center;
+  font-family: "Futura", sans-serif;
 }
-
 
 .filter_div {
   margin-bottom: 15px;
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
 }
 .select {
   margin-left: 5px;
+  border-radius: 5px;
 }
 
 .option {
   margin-left: 10px;
+  font-family: "Futura", sans-serif;
+}
+
+@media only screen and (max-width: 850px) {
+  .categories {
+    width: 400px;
+    margin: 10px 5px;
+    padding: 10px;
+    font-size: 12px;
+  }
+
+  .category {
+    margin: 10px 5px;
+    padding: 10px;
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .main_div {
+    margin-top: 100px;
+  }
+
+  .input {
+    width: 200px;
+  }
+  .main {
+    height: 300px;
+  }
+
+  .category {
+    font-size: 12px;
+  }
 }
