--- a/client/src/Components/Manager/ProductsManager/NewCategory.module.css
+++ b/client/src/Components/Manager/ProductsManager/NewCategory.module.css
@@ -23,7 +23,7 @@
   margin-top: 30px;
   margin-bottom: 60px;
   font-family: "Futura", sans-serif;
-  color: rgba(61, 61, 61, 0.954) !important;
+  color: rgba(61, 61, 61, 0.954);
 }
 
 .button {
