--- a/client/src/Components/Manager/DashboardManager/DashboardManager.module.css
+++ b/client/src/Components/Manager/DashboardManager/DashboardManager.module.css
@@ -2,9 +2,6 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  /* position: fixed;
-  left: 50%;
-  transform: translate(-50%); */
   width: 100%;
   margin-left: 25px;
 }
@@ -26,27 +23,6 @@
 }
 
 .info:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-}
-
-.total_paid_orders,
-.reservations {
-  width: 350px;
-  height: 200px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  transition: all 0.2s ease-in-out;
-}
-
-.total_paid_orders:hover,
-.reservations:hover {
   transform: scale(1.05);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
@@ -98,26 +74,28 @@
 
 @media only screen and (max-width: 1100px) {
   .info {
-    width: 320px;
+    width: 300px;
   }
 
   .dashboard {
     position: fixed;
     left: 50%;
     transform: translate(-50%);
-    width: 100%;
+    width: 70%;
     margin-left: 25px;
   }
 }
 
 @media only screen and (max-width: 900px) {
   .info {
-    width: 300px;
+    width: 220px;
     height: 200px;
+    margin-right: 2px;
   }
 
   .data {
     font-size: 14px;
+    margin-top: 20px;
   }
 
   .title {
@@ -129,14 +107,15 @@
   }
 
   .dashboard {
-    width: 90%;
+    width: 70%;
   }
 }
 
 @media only screen and (max-width: 690px) {
   .info {
-    width: 250px;
+    width: 200px;
     height: 150px;
+    margin-left: 10px;
   }
 
   .data {
@@ -153,7 +132,52 @@
   }
 
   .dashboard {
-    width: 95%;
+    width: 70%;
     height: auto;
+  }
+}
+
+@media only screen and (max-width: 610px) {
+  .info {
+    width: 180px;
+    height: 150px;
+  }
+  .dashboard {
+    width: 80%;
+    height: auto;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .info {
+    width: 180px;
+    height: 140px;
+    margin-bottom: 5px;
+  }
+  .dashboard {
+    width: 90%;
+    height: auto;
+  }
+
+  .data {
+    margin-top: 10px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .info {
+    width: 180px;
+    height: 140px;
+    margin-bottom: 5px;
+    margin-left: 0px;
+    left: -8%;
+  }
+  .dashboard {
+    width: 90%;
+    height: auto;
+  }
+
+  .data {
+    margin-top: 10px;
   }
 }
