--- a/client/src/Components/Manager/UsersManager/OneUser.module.css
+++ b/client/src/Components/Manager/UsersManager/OneUser.module.css
@@ -6,7 +6,7 @@
 }
 .card {
   width: 150px;
-  height: 150px;
+  height: 100px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -25,12 +25,12 @@
 }
 
 .info {
-  padding: 15px;
+  padding: 10px;
 }
 
 .name {
   font-size: 18px;
-  margin-bottom: 8px;
+  margin-bottom: 6px;
   letter-spacing: 1px;
   color: #fff;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
@@ -46,7 +46,7 @@
   display: flex;
   justify-content: space-evenly;
   margin-top: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   font-size: 18px;
   color: #f8f8f8;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
@@ -61,5 +61,26 @@
 @media only screen and (max-width: 500px) {
   .card {
     height: auto;
+    width: 100px;
+  }
+
+  .icons {
+    margin-top: 2px;
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #f8f8f8;
+  }
+
+  .role {
+    font-size: 10px;
+  }
+
+  .info {
+    padding: 5px;
+  }
+
+  .name {
+    font-size: 12px;
+    margin-bottom: 2px;
   }
 }
