--- a/client/src/Components/Manager/StatisticsManager/Waiters.module.css
+++ b/client/src/Components/Manager/StatisticsManager/Waiters.module.css
@@ -8,6 +8,10 @@
   transform: translate(-50%);
 }
 
+:global .ant-table-wrapper .ant-table-tbody > tr > td {
+  padding: 7px 7px;
+}
+
 .button_search {
   margin-left: 10px;
 }
@@ -20,7 +24,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 40px;
+  margin-top: 5px;
   height: 65vh;
 }
 
@@ -95,7 +99,7 @@ label {
 
 @media screen and (max-width: 1000px) {
   .main_div {
-    margin-top: 20px;
+    margin-top: 10px;
   }
   .button_search {
     margin-left: 5px;
@@ -106,7 +110,6 @@ label {
   }
 
   .data {
-    margin-top: 90px;
     height: 70vh;
   }
 
@@ -132,7 +135,6 @@ label {
 @media screen and (max-width: 740px) {
   .main_div {
     left: 47%;
-    margin-top: 20px;
   }
   .button_search {
     margin-left: 5px;
@@ -156,7 +158,7 @@ label {
   }
 
   .button_download {
-    bottom: -3%;
+    bottom: 5%;
   }
 
   .select {
@@ -164,7 +166,7 @@ label {
   }
 
   .filter_dates {
-    margin-top: 100px;
+    margin-top: 60px;
   }
 
   .filter_div {
@@ -203,10 +205,49 @@ label {
   }
 
   .filter_dates {
-    margin-top: 90px;
+    margin-top: 70px;
   }
 
   .range_picker {
     width: 180px;
+  }
+
+  :global .ant-table-wrapper .ant-table-tbody > tr > td {
+    padding: 0px 0px;
+    font-size: 9px;
+  }
+
+  :global .ant-table-column-title {
+    padding: 0px 0px;
+    font-size: 9px;
+  }
+
+  :global .ant-table-cell {
+    padding: 0px 0px;
+    font-size: 9px;
+  }
+
+  .button_download {
+    bottom: 30%;
+  }
+}
+@media screen and (max-width: 400px) {
+  :global .ant-table-wrapper .ant-table-tbody > tr > td {
+    padding: 0px 0px;
+    font-size: 9px;
+  }
+
+  :global .ant-table-column-title {
+    padding: 0px 0px;
+    font-size: 9px;
+  }
+
+  :global .ant-table-cell {
+    padding: 0px 0px;
+    font-size: 9px;
+  }
+
+  .button_download {
+    bottom: 30%;
   }
 }
