overflow for small screens

--- a/client/src/Components/Manager/ProductsManager/AllProducts.module.css
+++ b/client/src/Components/Manager/ProductsManager/AllProducts.module.css
@@ -170,7 +170,8 @@ button {
   .products {
     width: 90vw;
     margin-top: 2px;
-    height: auto;
+    overflow-y: auto;
+    max-height: calc(100vh - 550px);
   }
 
   .option {
