--- a/client/src/Components/Manager/StatisticsManager/Products.module.css
+++ b/client/src/Components/Manager/StatisticsManager/Products.module.css
@@ -74,3 +74,9 @@
     max-height: calc(100vh - 400px);
   }
 }
+
+@media screen and (max-width: 400px) {
+  .charts {
+    max-height: calc(100vh - 320px);
+  }
+}
