--- a/client/src/Components/Waiter/ViewOrder/ViewOrder.module.css
+++ b/client/src/Components/Waiter/ViewOrder/ViewOrder.module.css
@@ -347,17 +347,18 @@
     left: 46%;
     transform: translate(-50%, -50%);
     overflow-y: auto;
-    max-height: calc(100vh - 330px);
+    max-height: calc(100vh - 150px);
   }
 
   .main_order {
-    height: 100%;
+    overflow-y: auto;
+    max-height: calc(100vh - 100px);
   }
 }
 
 @media only screen and (max-width: 400px) {
   .main {
-    max-height: calc(100vh - 300px);
+    max-height: calc(100vh - 150px);
   }
 
   .main_order {
